tests/errors/first_stage/.string/not_printable/not_printable.am
unprintable: .string "Can't print this:	"
